Fixed all errors
Repaired errors using wave to point them out. Also fixed the contrast on
the contrast page.

--- a/headings.html
+++ b/headings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Accessibily Headings</title>
@@ -16,11 +16,13 @@
 
     <div class="content">
       <center>
+	  <h1>
       <b>Utah State University<br>
       Washington DC Internship Program<br>
       US Congress, Washington DC, USA</b>
       <br />
-      <p><img src="https://usueastern.edu/price/internships/_images/internship.jpg"></p>
+	  </h1>
+      <p><img alt="Learning" src="https://usueastern.edu/price/internships/_images/internship.jpg"></p>
       </center>
 
       <p><strong>Application Form</strong></p>
